@@ -25,7 +25,10 @@
 # Please send mail to me or the mailing list if you find bugs or have
 # any suggestions.
 
-import sys, getopt, gzip, os
+import sys
+import getopt
+import gzip
+import os
 
 from duplicity import diffdir
 from duplicity import patchdir
