@@ -19,7 +19,8 @@
 # along with duplicity; if not, write to the Free Software Foundation,
 # Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 
-import unittest, os
+import unittest
+import os
 
 from duplicity import path
 from . import FunctionalTestCase
