@@ -19,7 +19,10 @@
 # along with duplicity; if not, write to the Free Software Foundation,
 # Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 
-import os, sys, random, unittest
+import os
+import sys
+import random
+import unittest
 
 from duplicity import collections
 from duplicity import backend
