@@ -19,7 +19,9 @@
 # along with duplicity; if not, write to the Free Software Foundation,
 # Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 
-import os, sys, unittest
+import os
+import sys
+import unittest
 
 from duplicity.path import *  # @UnusedWildImport
 from duplicity import diffdir
