@@ -19,7 +19,10 @@
 # along with duplicity; if not, write to the Free Software Foundation,
 # Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 
-import sys, unittest, time, types
+import sys
+import unittest
+import time
+import types
 from duplicity import dup_time
 from . import UnitTestCase
 
