@@ -19,7 +19,10 @@
 # along with duplicity; if not, write to the Free Software Foundation,
 # Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 
-import sys, os, unittest, random
+import sys
+import os
+import unittest
+import random
 
 from duplicity import gpg
 from duplicity import path
