@@ -19,7 +19,8 @@
 # along with duplicity; if not, write to the Free Software Foundation,
 # Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 
-import sys, unittest
+import sys
+import unittest
 
 from duplicity.statistics import *  # @UnusedWildImport
 from duplicity import path
